syntax = "proto3";

package task.v1;

// 日付型を外部のprotoファイルからimportする
import "google/protobuf/timestamp.proto";

option go_package = "github.com/YuichiNAGAO/buf-connect-todo-app/backend/proto/task/v1";

service TaskService {
  rpc GetTaskList(GetTaskListRequest) returns (GetTaskListResponse) {}
}

message Task {
  string id = 1;
  string user_id = 2;
  string name = 3;
  bool is_completed = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message GetTaskListRequest {
  //
}

message GetTaskListResponse {
  repeated Task tasks = 1;
}